# AG6

./: .flake8  CI_MERGE_INFLUENCE.md  CLAUDE.md  GIT_HOOKS_POLICY.md  GIT_MERGE_POLICY.md  GIT_RANGE_DIFF_DEMO.md  GIT_RERERE_DEMO.md  OUTSTANDING_DELIVERABLES.md  README.md  fileA.txt  install-hooks.sh  new.py  pyproject.toml  test_activity_log.py  test_rerere.py
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci.yml  pr-labels.yml
docs/: merge-policy.md
tests/: test_arrays.py  test_strings.py
